caudium (2:1.4.7-4) unstable; urgency=low

  * The latest upstream snapshot
  * [l10n] Czech translation for caudium (Closes: #331131)
    Updated translation submitted by Martin Šín <martin.sin@seznam.cz>
    thanks a lot.

 -- Marek Habersack <grendel@debian.org>  Tue,  4 Oct 2005 07:54:56 +0200

caudium (2:1.4.7-3) unstable; urgency=high

  * Caudium takes over from Apache (Closes: #295921). Really closing the
    bug now.
  * urgency high to force recompile and test (once again...) whether the 
    RC bug 309191 can be closed now that Pike 7.6 was compiled for the 
    most important architectures.

 -- Marek Habersack <grendel@debian.org>  Sat, 13 Aug 2005 00:52:07 +0200

caudium (2:1.4.7-2) unstable; urgency=high

  * Minor bugfix for the syslog support
  * Urgency high to rush the recompile in order to test whether the
    RC bug 309191 can be closed.

 -- Marek Habersack <grendel@debian.org>  Sat, 23 Jul 2005 02:21:50 +0200

caudium (2:1.4.7-1) unstable; urgency=high

  * The latest released version of the server
  * Closes: #306070: bug at line 83 (missing eval command) and cosmetic
    changes in postinstall
  * Closes: #283847: /etc/init.d/caudium fails to stop caudium. Caudium
    1.4 uses a different start/stop mechanism which does not exhibit the
    problem (even though the init.d script is mostly the same)
  * Closes: #315805: INTL:vi. Added the Vietnamese translation.
  * Closes: #294975: config access is open on all interfaces by default
    setup. Changed to allow connections only from 127.0.0.1. The only
    issue with that is that you will need to use ssh forwarding to access
    the configuration port from a remote location for initial config
    (or use /e/links locally)
  * Closes: #315288: French debconf templates translation update
  * Closes: #304880: [l10n] Czech translation for caudium
  * Closes: #297830: when purging caudium tries to remove /var/state

 -- Marek Habersack <grendel@debian.org>  Tue, 19 Jul 2005 11:49:10 +0200
