@@ -1,1 +1,1 @@
-usr/lib/caudium/lib/*/Caudium.so
+usr/lib/caudium/lib/*/*.so
