@@ -2,14 +2,14 @@ Source: caudium
 Section: web
 Priority: optional
 Maintainer: Marek Habersack <grendel@debian.org>
-Standards-Version: 3.6.1
-Build-Depends: debhelper (>> 4.1.16), pike7.6-dev (>= 7.6.33-1), pike7.6-core (>= 7.6.33-1), debconf-utils, libpcre3-dev, libsablot0-dev, libxmltok1-dev, debconf (>= 0.2.26), sharutils, autoconf (>> 2.53), perl (>=5.8.0)
+Standards-Version: 3.6.2.1
+Build-Depends: debhelper (>> 4.1.16), pike7.6-dev (>= 7.6.33-1), pike7.6-core (>= 7.6.33-1), debconf-utils, libpcre3-dev, libsablot0-dev, libxmltok1-dev, debconf (>= 0.2.26), sharutils, autoconf (>> 2.53), perl (>=5.8.0), libmhash-dev
 
 Package: caudium
 Architecture: any
 Pre-Depends: debconf (>= 0.2.26)
-Depends: ${shlibs:Depends}, ${pike:name}-core (>= ${pike:ver}-1), ${pike:name}-core (<= ${pike:ver}-99), caudium-modules (= ${Source-Version}), ${pike:name}-image (>= ${pike:ver}-1), ${pike:name}-image (<= ${pike:ver}-99), ttf-bitstream-vera
-Suggests: roxen-doc (>= 1.3.122-1), pexts-pcre, pexts-mhash, logrotate
+Depends: ${shlibs:Depends}, ${pike:name}-core (>= ${pike:ver}-1), ${pike:name}-core (<= ${pike:ver}-99), caudium-modules (= ${Source-Version}), ${pike:name}-image (>= ${pike:ver}-1), ${pike:name}-image (<= ${pike:ver}-99), ${pike:name}-pcre, ttf-bitstream-vera
+Suggests: roxen-doc (>= 1.3.122-1), logrotate
 Recommends: caudium-pixsl, caudium-ultralog, mime-support
 Provides: httpd, httpd-cgi
 Description: An extensible WWW server written in Pike
