@@ -39,13 +39,6 @@ PACKAGES=caudium caudium-modules caudium-pixsl caudium-ultralog
 REMOVEFONTS=lucida_unicode.ttf lucida_unicode.txt verdana.ttf verdana.txt
 
 CFLAGS = -fPIC
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-CFLAGS += -O0
-CFARGSEXTRA=--with-rtldebug --with-cdebug --with-debug --without-copt
-else
-CFLAGS += -O2
-CFARGSEXTRA=--without-rtldebug --without-cdebug --without-debug
-endif
 
 # Temporary workaround for hppa linker issues
 ifeq ($(DEB_BUILD_ARCH),hppa)
@@ -71,7 +64,7 @@ configure-stamp:
 	if test "$(CVS_SNAPSHOT)" = "yes"; then \
 	    ./autogen.sh; \
 	fi
-	./configure --prefix=/usr --with-pike=$(PIKEBIN) --with-serverdir=/usr/lib/caudium
+	./configure --prefix=/usr --with-pike=$(PIKEBIN) --with-serverdir=/usr/lib/caudium --without-PCRE
 
 	touch configure-stamp
 
